Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16697

QIcon::fromTheme() fails if icon theme name is an empty string

    XMLWordPrintable

Details

    Description

      On systems that don't support icon themes (e.g. Windows) QIcon::fromTheme() fails to find/load icons available in application resources or other fallback locations until the application calls QIcon::setThemeName() with any non-empty string (even single space works).

      A small example application and 2 screenshots (before and after calling QIcon::setThemeName(" ")).

      Attachments

        1. qicontest_after.png
          qicontest_after.png
          5 kB
        2. qicontest_before.png
          qicontest_before.png
          3 kB
        3. qicontest.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            dinosaur Constantin Makshin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes